<resources>
    <string name="app_name">task-app</string>
    <string name="ToDo">Tasks To Do</string>
    <string name="Ongoing">Ongoing Tasks</string>
    <string name="Finished">Finished Tasks</string>
    <string name="Header">SUMMARY</string>
    <string name="NewTask">New Task</string>
    <string name="ShowAll">Show All</string>
    <string name="TaskName">Name of Task</string>
    <string name="TaskDetails">Details of Task</string>
    <string name="SwitchDone">DONE?</string>
    <string name="PlaceholderPercentage">0%</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
</resources>
